fix: stop form field label wrapping

--- a/src/components/form-field/form-field.scss
+++ b/src/components/form-field/form-field.scss
@@ -4,6 +4,7 @@ $active-text-shadow: 0 0 0.15rem var(--primary);
   text-transform: uppercase;
   font-weight: bold;
   font-family: inherit;
+  white-space: nowrap;
 }
 
 .crypt-form-label-muted {
